# trainall

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: CONCEPTS.md  DESIGN.md  GLOSSARY.md
docs/methods/: 01-pretraining.md  02-continued-pretraining.md  03-sft.md  04-preference-optimization.md  05-rlhf.md  06-rlvr-grpo.md  07-agentic-rl.md  08-distillation-and-selfplay.md  09-process-supervision.md  10-lora-qlora.md  11-architectures.md  README.md
docs/methods/en/: 01-pretraining.md  02-continued-pretraining.md  03-sft.md  04-preference-optimization.md  05-rlhf.md  06-rlvr-grpo.md  07-agentic-rl.md  08-distillation-and-selfplay.md  09-process-supervision.md  10-lora-qlora.md  11-architectures.md  README.md
examples/: 01_sft.py  02_dpo.py  03_rlvr_grpo.py  04_agentic_rl.py  05_distill_and_selfplay.py  06_pretrain_from_scratch.py  07_lora_qlora.py  README.md  _toy.py
examples/configs/: dpo.yaml  grpo.yaml  sft.yaml
scripts/: RUNBOOK_gpu_validate.md  gpu_validate.py
src/trainall/: __init__.py  _optional.py  base.py  cli.py  config.py  registry.py  types.py
src/trainall/algorithms/: __init__.py  full.py  lora.py  qlora.py
src/trainall/data/: __init__.py  packing.py  rejection_sampling.py  selfplay.py  sources.py  synthetic.py  templates.py
src/trainall/models/: __init__.py  attention.py  block.py  config.py  mlp.py  moe.py  norm.py  rope.py  transformer.py
src/trainall/objectives/: __init__.py  cpt.py  distill.py  grpo.py  ppo.py  pretrain.py  prm.py  reward_model.py  rloo.py  sft.py
src/trainall/pipelines/: __init__.py  base.py  recipes.py
src/trainall/rewards/: __init__.py  model_reward.py  shaping.py  verifier_reward.py
src/trainall/rl/: __init__.py  agentic.py  environment.py  rollout.py  tools.py
src/trainall/training/: __init__.py  callbacks.py  trainer.py
src/trainall/utils/: __init__.py  logging.py  seeding.py  tensorops.py
src/trainall/verifiers/: __init__.py  citation_verifier.py  code_verifier.py  composite.py  format_verifier.py  (+3 more)
tests/: conftest.py  test_algorithms.py  test_core.py  test_data.py  test_models.py  test_objectives_likelihood.py  test_objectives_preference.py  test_objectives_rl.py  test_pipelines.py  test_rewards.py  test_rl.py  test_training.py  test_verifiers.py
(+7 files in other folders)
